action section done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
     </header>
 
     <main>
+           <section class="action">
+            <div class="action-text-section">
+                <h3 class="action-heading raleway">See It in Action</h3>
+                <h6 class="action-subtittle raleway">Explore the live preview and imagine your brand <br>in this bold new look.</h6>
+                <a href=""><button class="action-button btn">Launch Live Preview</button></a>
+            </div>
 
+            <div class="image-section">
+                <img src="Assets/wc-mini.png" alt="">
+            </div>
+           </section>
     </main>
 
     <footer>
