action section and productive user section done

--- a/index.html
+++ b/index.html
@@ -35,20 +35,120 @@
     </header>
 
     <main>
-           <section class="action">
+        <section class="action">
             <div class="action-text-section">
                 <h3 class="action-heading raleway">See It in Action</h3>
-                <h6 class="action-subtittle raleway">Explore the live preview and imagine your brand <br>in this bold new look.</h6>
+                <h6 class="action-subtittle raleway">Explore the live preview and imagine your brand <br>in this bold
+                    new look.</h6>
                 <a href=""><button class="action-button btn">Launch Live Preview</button></a>
             </div>
 
             <div class="image-section">
-                <img src="Assets/wc-mini.png" alt="">
+                <img src="Assets/wc-mini.png" alt="" class="action-image">
             </div>
-           </section>
+        </section>
+
+        <section class="productive-users-section">
+            <div>
+                <h4 class="center-title raleway">Joined Thousands of Productive Users</h4>
+            </div>
+            <div class="data">
+                <div class="first-data-box">
+                    <li class="first-data inter">50K</li>
+                    <h6 class="first-data-subtitle inter">Active Users</h6>
+                </div>
+                <div class="second-data-box">
+                    <li class="second-data inter">2M+</li>
+                    <h6 class="second-data-subtitle inter">Focus Sessions</h6>
+                </div>
+
+                <div class="third-data-box">
+                    <li class="third-data inter">95%</li>
+                    <h6 class="third-data-subtitle inter">Satisfaction Rate</h6>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="get-in-touch-section">
+
+            <div>
+                <h1 class="get-in-touch-section-title raleway">Let's Get in Touch</h1>
+
+            </div>
+            <div class="form-elements">
+                <form>
+                    <label for="email">Email</label>
+                    <input type="email" name="" id="email">
+                    <label for="name">Name</label>
+                    <input type="text" name="" id="name">
+                    <label for="message">Message</label>
+                    <textarea name="" id="message" cols="50"></textarea>
+
+                    <a href=""><button class="get-in-touch-button btn">Get in Touch</button></a>
+                </form>
+            </div>
+        </section>
+
+        <section class="rating">
+            <div class="rating-section">
+                <div class="rating-title raleway">
+                    <h3>What our users say</h3>
+                </div>
+                <div class="star-icon">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                </div>
+                <div class="rating-container">
+                    <div class="rating-box">
+                        <h4 class="rating-title">Loved by Designers</h4>
+                        <p class="rating-description">This template instantly leveled up our presence.” – Studio Vertex
+                        </p>
+                        <img src="Assets/avatar.png" alt="">
+                    </div>
+                    
+                    <div class="rating-box">
+                        <h4 class="rating-title">Loved by Designers</h4>
+                        <p class="rating-description">This template instantly leveled up our presence.” – Studio Vertex
+                        </p>
+                        <img src="Assets/avatar.png" alt="">
+                    </div>
+                    <div class="rating-box">
+                        <h4 class="rating-title">Loved by Designers</h4>
+                        <p class="rating-description">This template instantly leveled up our presence.” – Studio Vertex
+                        </p>
+                        <img src="Assets/avatar.png" alt="">
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
+        <section class="footer-section">
+            <div class="website-name">
+                <h2 class="footer-section-header inter">LOGO</h2>
+            </div>
+
+            <div class="footer-section-subtitle">
+                <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how
+                    we can bring your vision to life.</p>
+            </div>
+
+            <div class="footer-items">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">How it works</a>
+                <a href="">Services</a>
+            </div>
+
+        </section>
+
 
     </footer>
 
